# shelvd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: pr-auto-update-branches.yml
assets/: config.example.toml
assets/shell-integration/: README.md  shelvd.bash  shelvd.fish  shelvd.zsh
crates/shelvd-app/: Cargo.toml
crates/shelvd-app/src/: completion.rs  main.rs  overlay.rs
crates/shelvd-core/: Cargo.toml
crates/shelvd-core/src/: color.rs  config.rs  error.rs  frozen.rs  geometry.rs  lib.rs  overlay.rs  palette.rs  snapshot.rs  theme.rs
crates/shelvd-pty/: Cargo.toml
crates/shelvd-pty/src/: lib.rs
crates/shelvd-render/: Cargo.toml
crates/shelvd-render/src/: lib.rs  rect.rs
crates/shelvd-term/: Cargo.toml
crates/shelvd-term/src/: block.rs  completion.rs  lib.rs  osc133.rs
docs/ai/: github-workflow
notes/: m0-status.md  m1-status.md  m2-per-block-reflow.md  m2-status.md  m3-warp-input-line.md
